[package]
name = "tree-sitter-systemrdl"
description = "System RDL 2.0 Grammar for tree-sitter"
version = "0.1.0"
authors = ["Aliaksei Chapyzhenka"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "systemrdl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "git+https://github.com/systemrdl/tree-sitter-systemrdl.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
